--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -25,12 +25,12 @@
     }
 
     .hero-section {
-        min-height: 100vh;
+        min-height: 120vh;
         padding: 1rem 1rem;
         text-align: center;
         background-size: cover;
     }
-
+    
     .main-title {
         font-size: 3rem;
         letter-spacing: 0.1rem;
@@ -71,13 +71,34 @@
 
 @media (max-width: 480px) {
     .navbar {
-        padding: 0.8rem;
+        padding: 0.5rem;
     }
 
     .hero-section {
-        min-height: 80vh;
-        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: end;
+        min-height: 100vh;
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 0.5rem;
+        position: relative;
+        background: linear-gradient(
+            to top, 
+            rgba(0, 0, 0, 1), 
+            rgba(0, 0, 0, 0.7), 
+            rgba(0, 0, 0, 0.2), 
+            rgba(0, 0, 0, 0)
+        ), url('./Images/Profile/Lasith_small.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 0;
+        padding: 0;
+        width: 100vw;
     }
+
 
     .main-title {
         font-size: 2rem;
