--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ html {
 
 .navbar-toggler{
     background-color: #ffffff;
+    justify-content: end;
 }
 
 .navbar.scrolled .navbar-toggler{
@@ -151,10 +152,21 @@ html {
 
 
 .container {
-    max-width: 100%;
+    max-width: 100vw;
     padding: 0;
     margin: 0;
+    display: flex;
 }
+
+nav .container {
+    width: 100%;
+    height: auto;
+    min-height: 44px;
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;
+    box-sizing: border-box;
+  }
 
 section {
     min-height: 100vh;
@@ -162,8 +174,6 @@ section {
     padding: 6rem 2rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 section h2 {
@@ -178,6 +188,8 @@ section h2 {
 /* About Section */
 .about-section {
     background: rgba(0, 255, 255, 0.02);
+    justify-content: center;
+    align-self: center;
 }
 
 .about-grid {
@@ -200,6 +212,7 @@ section h2 {
     padding: 60px 20px;
     background-color: #000; 
     color: #fff; 
+    justify-content: center;
 }
 
 .projects-section .section-title {
@@ -342,6 +355,7 @@ section h2 {
  /* Skills Section */
 .skills-section {
     background: rgba(0, 255, 255, 0.02);
+    justify-content: center;
 }
 
 .skills-grid {
