--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,17 @@ body {
     color: #fff;
     font-family: "Montserrat", serif;
     min-height: 100vh;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
-  
+
 html {
-    -ms-overflow-style: none; 
-    scrollbar-width: none; 
-    scroll-behavior: smooth; 
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
 }
 
 /* Navbar */
@@ -29,9 +29,9 @@ html {
 }
 
 .navbar.scrolled {
-    background: rgba(0, 0, 0, 0.6); 
-    backdrop-filter: blur(10px);  
-    -webkit-backdrop-filter: blur(10px); 
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .navbar .navbar-brand,
@@ -49,12 +49,12 @@ html {
     color: #0ff !important;
 }
 
-.navbar-toggler{
+.navbar-toggler {
     background-color: #ffffff;
     justify-content: end;
 }
 
-.navbar.scrolled .navbar-toggler{
+.navbar.scrolled .navbar-toggler {
     filter: invert(1);
     border-color: #000000;
 }
@@ -68,14 +68,14 @@ html {
 }
 
 .nav-link {
-    color: #000000 ;
+    color: #000000;
     margin: 0 1rem;
     font-weight: 600;
     transition: color 0.3s ease;
 }
 
 .nav-link:hover {
-    color: #0ff ; 
+    color: #0ff;
 }
 
 /* Hero Section */
@@ -90,12 +90,13 @@ html {
     letter-spacing: 0.5rem;
     position: relative;
     background: linear-gradient(
-        to top, 
-        rgba(0, 0, 0, 1), 
-        rgba(0, 0, 0, 0.7), 
-        rgba(0, 0, 0, 0.2), 
-        rgba(0, 0, 0, 0)
-    ), url('./Images/Profile/Lasith_bg.png');
+            to top,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.2),
+            rgba(0, 0, 0, 0)
+        ),
+        url("./Images/Profile/Lasith_bg.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -104,7 +105,6 @@ html {
     width: 100vw;
 }
 
-
 .main-title {
     font-size: 4rem;
     font-weight: 600;
@@ -112,7 +112,6 @@ html {
     position: relative;
     z-index: 2;
     letter-spacing: 0.7rem;
-
 }
 
 .animated-text {
@@ -150,7 +149,6 @@ html {
     }
 }
 
-
 .container {
     max-width: 100vw;
     padding: 0;
@@ -166,7 +164,7 @@ nav .container {
     align-items: center;
     padding: 0.5rem;
     box-sizing: border-box;
-  }
+}
 
 section {
     min-height: 100vh;
@@ -219,8 +217,8 @@ section h2 {
 /* Projects Section */
 .projects-section {
     padding: 60px 20px;
-    background-color: #000; 
-    color: #fff; 
+    background-color: #000;
+    color: #fff;
     justify-content: center;
 }
 
@@ -228,7 +226,7 @@ section h2 {
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 40px;
-    color: #0ff; 
+    color: #0ff;
 }
 
 .project-category {
@@ -260,7 +258,8 @@ section h2 {
     font-weight: 500;
 }
 
-.filter-btn:hover, .filter-btn.active {
+.filter-btn:hover,
+.filter-btn.active {
     background: #0ff;
     color: #000;
 }
@@ -397,6 +396,20 @@ section h2 {
     transition: all 0.3s ease;
     flex: 1;
     text-align: center;
+    text-decoration: none;
+}
+
+.view-website-btn {
+    padding: 0.5rem 1rem;
+    background: transparent;
+    border: 1px solid #0ff;
+    color: #0ff;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    flex: 1;
+    text-align: center;
+    text-decoration: none;
 }
 
 .view-details-btn:hover {
@@ -419,7 +432,8 @@ section h2 {
         flex-direction: column;
     }
 
-    .project-link, .view-details-btn {
+    .project-link,
+    .view-details-btn {
         width: 100%;
     }
 }
@@ -541,7 +555,7 @@ section h2 {
 }
  */
 
- /* Skills Section */
+/* Skills Section */
 .skills-section {
     background: rgba(0, 255, 255, 0.02);
     justify-content: center;
@@ -578,7 +592,7 @@ section h2 {
 }
 
 .category-title::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: 0;
     left: 50%;
@@ -736,7 +750,7 @@ section h2 {
     border-color: #0ff;
     outline: none;
 }
-  
+
 .submit-btn {
     width: auto;
     min-width: 200px;
@@ -749,9 +763,9 @@ section h2 {
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s ease;
-    display: block; 
-    margin-left: auto; 
-    margin-right: auto; 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .submit-btn:hover {
@@ -759,12 +773,11 @@ section h2 {
     color: #000;
 }
 
-
 .social-links {
     display: flex;
     gap: 3rem;
-    justify-self: center;  
-    font-size: 2em; 
+    justify-self: center;
+    font-size: 2em;
 }
 
 .social-links a {
@@ -788,7 +801,7 @@ section h2 {
     max-width: 100vw;
     margin: 0 auto;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     justify-self: center;
 }
